Fix Admin>Customize text contrast

--- a/common/common.scss
+++ b/common/common.scss
@@ -2355,7 +2355,8 @@ html.dark .dashboard-stats table th,
 html.dark .reply-to a,
 html.dark div.poll .poll-info,
 html.dark a.hashtag,
-html.dark .title-wrapper .topic-statuses .d-icon {
+html.dark .title-wrapper .topic-statuses .d-icon,
+html.dark .user-theme-creator .user-theme-list ul li a {
 	color: #019245;
 }
 
